Refactor: Passwod-change page refactor UI

--- a/app/templates/accounts/registration/change-password.html
+++ b/app/templates/accounts/registration/change-password.html
@@ -10,38 +10,47 @@
         <div class="card-body">
             <div class="body_container box box--big">
                 <!-- form starts here -->
-                <form id="change-password-form" method="post">
-                    {% csrf_token %}
-                    <div class="agile-field-txt">
-                        <label>
-                            <i class="fa fa-key" aria-hidden="true"></i> Old password </label>
-                        <input id="old_password" name="old_password" placeholder="Enter your old password" required=""
-                               type="password" class="form-control">
+                <div class="row">
+                    <div class="col-md-8">
+                        <form id="change-password-form" method="post">
+                            {% csrf_token %}
+                            <div class="agile-field-txt">
+                                <label>
+                                    <i class="fa fa-key" aria-hidden="true"></i> Old password </label>
+                                <input id="old_password" name="old_password" placeholder="Enter your old password"
+                                       required=""
+                                       type="password" class="form-control">
+                            </div>
+                            <div class="agile-field-txt">
+                                <label>
+                                    <i class="fa fa-key" aria-hidden="true"></i> New Password </label>
+                                <input name="new_password1" type="password" class="form-control"
+                                       placeholder="Enter your new password " required="" id="new_password1">
+                            </div>
+                            <div class="agile-field-txt">
+                                <label>
+                                    <i class="fa fa-key" aria-hidden="true"></i> New Password Confirmation </label>
+                                <input name="new_password2" type="password" class="form-control"
+                                       placeholder="Enter your new password " required="" id="new_password2">
+                            </div>
+                            <div style="margin-top: 10px">
+                                <button type="submit" class="btn btn-success btn-sm">Save</button>
+                            </div>
+                        </form>
                     </div>
-                    <div class="agile-field-txt">
-                        <label>
-                            <i class="fa fa-key" aria-hidden="true"></i> New Password </label>
-                        <input name="new_password1" type="password" class="form-control"
-                               placeholder="Enter your new password " required="" id="new_password1">
+                    <div class="col-md-4">
+                        <div class="error-section error">
+                            {% if form.errors %}
+                                {% for field in form %}
+                                    <span>{{ field.name }}</span>
+                                    {% for error in field.errors %}
+                                        <p class="bg-danger text-white">{{ error }}</p>
+                                    {% endfor %}
+                                {% endfor %}
+                            {% endif %}
+                        </div>
                     </div>
-                    <div class="agile-field-txt">
-                        <label>
-                            <i class="fa fa-key" aria-hidden="true"></i> New Password Confirmation </label>
-                        <input name="new_password2" type="password" class="form-control"
-                               placeholder="Enter your new password " required="" id="new_password2">
-                    </div>
-                    {% if form.errors %}
-                        {% for field in form %}
-                            {{ field.name }}
-                            {% for error in field.errors %}
-                                <p style="color: red">{{ error }}</p>
-                            {% endfor %}
-                        {% endfor %}
-                    {% endif %}
-                    <div style="margin-top: 10px">
-                        <button type="submit" class="btn btn-success btn-sm">Save</button>
-                    </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
