--- a/app/templates/accounts/registration/password_change_done.html
+++ b/app/templates/accounts/registration/password_change_done.html
@@ -4,6 +4,6 @@
 
 {% block content %}
     <div class="card">
-        <h3>Password chagne done</h3>
+        <h3>Password change done</h3>
     </div>
 {% endblock %}
