--- a/app/templates/nomination/nomination_list.html
+++ b/app/templates/nomination/nomination_list.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <!-- page header  -->
-    {% include "symbol/pageheader.html" %}
+    {% include "nomination/pageheader.html" %}
     <!-- end page header  -->
     <div class="row">
         <!-- start table -->
