Refactor: Password reset done

--- a/app/templates/accounts/reset_password.html
+++ b/app/templates/accounts/reset_password.html
@@ -1,22 +1,43 @@
-{% extends 'base.html' %}
+{% extends 'base_auth.html' %}
+{% load static %}
+
+{% block title %} Reset password {% endblock %}
+
 {% block content %}
 
-    <div class="text-center" style="width: 80%; margin: 0 auto">
-        <h1>Welcome to the Password Reset Page</h1>
-        <h3>
-            Forgot your password? Please enter the email address you used to register
-            with us and we will send you a link to reset your password
-        </h3>
+    <div class="card">
+        <div class="card-header text-center">
+            <a href="{% url 'dashboard' %}">
+                <img class="logo-img" src="{% static 'assets/images/logo.png' %}" alt="logo"></a>
+        </div>
+        <div class="card-body form_submit">
+            <form action="/login/" method="POST">
+                {% csrf_token %}
+                <div class="from-group">
+                    {{ form }}
+                </div>
+                <button class="btn btn-info btn-sm" type="submit"> Send email</button>
+            </form>
+            <hr/>
+            <div class="text-center">
+                <a href="{% url 'homepage' %}">Return to home page</a>
+            </div>
+        </div>
     </div>
-    <br/>
 
-    <form action="" method="POST" class="text-center">
-        {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Send email"/><br>
-    </form><br/>
-    <div class="text-center">
-        <a href="{% url 'home' %}">Return to home page</a>
-    </div>
+    <style type="text/css">
+        .form_submit input {
+            margin-bottom: 10px;
+            display: block;
+            width: 100%;
+            font-size: 14px;
+            line-height: 1.42857143;
+            color: #71748d;
+            background-color: #fff;
+            border: 1px solid #d2d2e4;
+            border-radius: 5px;
+            padding: 10px;
+        }
+    </style>
 
 {% endblock %}
