--- a/app/templates/accounts/password_reset_done.html
+++ b/app/templates/accounts/password_reset_done.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>password reset done</title>
-</head>
-<body>
+{% extends 'base_auth.html' %}
 
-</body>
-</html>
+{% block title %} password Reset Done {% endblock %}
+
+{% block content %}
+
+    <div class="card">
+        <div class="card-header text-center">
+            <h2 class="card-title">Password reset complete.</h2>
+            <p></p>
+        </div>
+        <div class="card-body">
+            <p class="card-text">Your Password has been set. You may go ahead and login.</p>
+        </div>
+        <div class="card-footer text-center">
+            <a class="btn btn-success" href="{% url 'login' %}">Login</a>
+        </div>
+    </div>
+
+{% endblock %}
