Refactor: list of voter updated

--- a/app/templates/nomination/candidate_update.html
+++ b/app/templates/nomination/candidate_update.html
@@ -46,6 +46,10 @@
                             </div>
                         </div>
                         <div class="col-md-6">
+                             <div class="form-group">
+                                <label for="position">Certificate Name</label>
+                                {{ form.certificate_name }}
+                            </div>
                             <div class="form-group">
                                 <label for="position">Candidate Position</label>
                                 {{ form.position }}
