--- a/app/templates/nomination/apply-nomination.html
+++ b/app/templates/nomination/apply-nomination.html
@@ -16,6 +16,10 @@
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-md-6">
+                             <div class="form-group">
+                                <label for="position">Certificate Name</label>
+                                {{ form.certificate_name }}
+                            </div>
                             <div class="form-group">
                                 <label for="email_address">Candidate Email Address</label>
                                 {{ form.email_address }}
@@ -31,10 +35,6 @@
                             <div class="form-group">
                                 <label for="eduction">Candidate Education</label>
                                 {{ form.eduction }}
-                            </div>
-                            <div class="form-group">
-                                <label for="present_address">Candidate Present Address</label>
-                                {{ form.present_address }}
                             </div>
                             <div class="form-group">
                                 <label for="phone_number">Candidate Phone Number</label>
@@ -57,6 +57,10 @@
                             <div class="form-group">
                                 <label for="symbol_name">Candidate Symbol Name</label>
                                 {{ form.symbol_name }}
+                            </div>
+                            <div class="form-group">
+                                <label for="present_address">Candidate Present Address</label>
+                                {{ form.present_address }}
                             </div>
                         </div>
                     </div>
