Delete: Remove unused images

--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -7,7 +7,8 @@
     <div class="card ">
         <div class="card-header text-center">
             <a href="{% url 'dashboard' %}">
-                <img class="logo-img" src="{% static 'assets/images/logo.png' %}" alt="logo"></a>
+                <h3>EMS || Login</h3>
+            </a>
             <span class="splash-description">
                 {% if form.errors %}
                     <p class="alert alert-danger" role="alert">Your username and password didn't match.Please try again.
