--- a/app/templates/vote/vote.html
+++ b/app/templates/vote/vote.html
@@ -32,7 +32,7 @@
                             <img src="{{ vot.symbol_name.image.url }}" alt="{{ vot.symbol_name.name }}">
                         </div>
                         <div class="card-footer text-center">
-                            <button class="btn btn-success btn-sm">Vote</button>
+                            <p class="card-text">{{ vot.present_address }} || {{ vot.candidate.word_number }}</p>
                         </div>
                     </div>
                 </div>
