--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="{% static 'assets/images/favicon.jpg' %}" type="image/x-icon" sizes="16x16">
+    <link rel="icon" href="{% static 'assets/images/favicon.png' %}" type="image/x-icon" sizes="16x16">
     {% block stylesheet %}
         {% include 'stylesheet.html' %}
     {% endblock %}
