--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -30,11 +30,11 @@
                        role="tab"
                        aria-controls="profile" aria-selected="false">My Bio</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="order" data-toggle="tab" href="#orders"
-                       role="tab"
-                       aria-controls="contact" aria-selected="false">Other Information</a>
-                </li>
+{#                <li class="nav-item">#}
+{#                    <a class="nav-link" id="order" data-toggle="tab" href="#orders"#}
+{#                       role="tab"#}
+{#                       aria-controls="contact" aria-selected="false">Other Information</a>#}
+{#                </li>#}
             </ul>
             <div class="tab-content" id="myTabContent3">
                 <div class="tab-pane fade show active" id="home-vertical" role="tabpanel"
