New: Nominaiton full featured added

--- a/app/templates/vote/add_vote.html
+++ b/app/templates/vote/add_vote.html
@@ -25,7 +25,7 @@
                             <label for="candidate">Select Your Vote</label>
                             {{ form.vote }}
                         </div>
-                        <button style="margin-top: 10px" type="submit" class="btn-sm btn btn-success">Vote</button>
+                        <button type="submit" class="btn-sm btn btn-success">Vote</button>
                     </form>
                 </div>
             </div>
