Reafactor: reset your password and NID leangth increment

--- a/app/templates/accounts/reset_password.html
+++ b/app/templates/accounts/reset_password.html
@@ -7,8 +7,7 @@
 
     <div class="card">
         <div class="card-header text-center">
-            <a href="{% url 'dashboard' %}">
-                <img class="logo-img" src="{% static 'assets/images/logo.png' %}" alt="logo"></a>
+            <h4 class="card-title"> Reset your password</h4>
         </div>
         <div class="card-body form_submit">
             <form action="/login/" method="POST">
